if(USE_GCOV)
  set(PY_COV_OPTS "-m" "coverage" "run" "-a")
endif()

file(GLOB ALL_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(DIR ${ALL_DIRS})
    if(IS_DIRECTORY ${DIR})
        if (EXISTS "${DIR}/IGNORE")
            continue()
        endif()
        if (EXISTS "${DIR}/CMakeLists.txt")
            add_subdirectory(${DIR})
        else()
            file(GLOB TESTS "${DIR}/*Test*.cpp")
            add_definitions(-DBOOST_TEST_DYN_LINK)
            foreach(TEST_FILE ${TESTS})
                get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
                get_filename_component(TEST_FILENAME ${TEST_FILE} NAME)
                add_executable(${TEST_NAME} ${DIR}/${TEST_FILENAME})
                add_test(${TEST_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME})
                set_tests_properties(${TEST_NAME} PROPERTIES ENVIRONMENT "${TEST_ENV}")
                target_link_libraries(${TEST_NAME} _espressopp Boost::unit_test_framework)
            endforeach()

            file(GLOB TESTS_PY "${DIR}/test*.py")
            foreach(TEST_FILE ${TESTS_PY})
                get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
                add_test(${TEST_NAME} ${Python3_EXECUTABLE} ${PY_COV_OPTS} ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_NAME})
                set_tests_properties(${TEST_NAME} PROPERTIES ENVIRONMENT "${TEST_ENV}")
            endforeach()
        endif()
    endif()
endforeach()
