SUBDIRS=src

nobase_include_HEADERS = \
boost/mpi.hpp \
boost/mpi/allocator.hpp \
boost/mpi/collectives/all_gather.hpp \
boost/mpi/collectives/all_reduce.hpp \
boost/mpi/collectives/all_to_all.hpp \
boost/mpi/collectives/broadcast.hpp \
boost/mpi/collectives/gather.hpp \
boost/mpi/collectives/reduce.hpp \
boost/mpi/collectives/scan.hpp \
boost/mpi/collectives/scatter.hpp \
boost/mpi/collectives_fwd.hpp \
boost/mpi/collectives.hpp \
boost/mpi/communicator.hpp \
boost/mpi/config.hpp \
boost/mpi/datatype_fwd.hpp \
boost/mpi/datatype.hpp \
boost/mpi/detail/broadcast_sc.hpp \
boost/mpi/detail/communicator_sc.hpp \
boost/mpi/detail/computation_tree.hpp \
boost/mpi/detail/content_oarchive.hpp \
boost/mpi/detail/forward_iprimitive.hpp \
boost/mpi/detail/forward_oprimitive.hpp \
boost/mpi/detail/forward_skeleton_iarchive.hpp \
boost/mpi/detail/forward_skeleton_oarchive.hpp \
boost/mpi/detail/ignore_iprimitive.hpp \
boost/mpi/detail/ignore_oprimitive.hpp \
boost/mpi/detail/ignore_skeleton_oarchive.hpp \
boost/mpi/detail/mpi_datatype_cache.hpp \
boost/mpi/detail/mpi_datatype_oarchive.hpp \
boost/mpi/detail/mpi_datatype_primitive.hpp \
boost/mpi/detail/packed_iprimitive.hpp \
boost/mpi/detail/packed_oprimitive.hpp \
boost/mpi/detail/point_to_point.hpp \
boost/mpi/detail/text_skeleton_oarchive.hpp \
boost/mpi/environment.hpp \
boost/mpi/exception.hpp \
boost/mpi/graph_communicator.hpp \
boost/mpi/group.hpp \
boost/mpi/intercommunicator.hpp \
boost/mpi/nonblocking.hpp \
boost/mpi/operations.hpp \
boost/mpi/packed_iarchive.hpp \
boost/mpi/packed_oarchive.hpp \
boost/mpi/request.hpp \
boost/mpi/skeleton_and_content_fwd.hpp \
boost/mpi/skeleton_and_content.hpp \
boost/mpi/status.hpp \
boost/mpi/timer.hpp