DIST_SUBDIRS=unittest

subpkgincludedir=$(pkgincludedir)/esutil

subpkginclude_HEADERS = \
	SmallVector.hpp \
	DerivableSmallVector.hpp \
	Vector3D.hpp \
	Identifier.hpp \
	TupleVector.hpp \
	Timer.hpp \
	virtual_functional.hpp

noinst_LTLIBRARIES = libesutil.la

libesutil_la_SOURCES = \
	TupleVector.cpp \
	Timer.cpp 
