DIST_SUBDIRS=unittest

subpkgincludedir=$(pkgincludedir)/pairs

subpkginclude_HEADERS = \
        bindings.hpp \
	Set.hpp \
	All.hpp \
	Computer.hpp \
	EnergyComputer.hpp \
	ForceComputer.hpp \
	ComputerList.hpp

noinst_LTLIBRARIES = libpairs.la

libpairs_la_SOURCES = \
        bindings.cpp \
	Set.cpp \
	All.cpp \
        List.cpp \
        PythonComputer.cpp

